# curso-ia

./: .gitignore  README.md  pyproject.toml
docling/: 1-extration.py  2-extraction-images.py  3-chunking.py  4-hybrid-chunker.py  5-metadados.py  6-embeddings.py
docling/db/data/: meta.json
docling/db/data/collection/docling_paper/: storage.sqlite
docling/test_output/: docling_paper_metadata.jsonl
fundamentos/: tokenization-01.py  tokenization-02.py  tokenization-03.py  tokenization-04.py
llm/: llm-01.py  llm-02.py
projeto/app/: endpoint.py  router.py
rag/: rag-qdrant.py  rag.py
rag/db/data/: meta.json
rag/db/data/collection/ml_documents/: storage.sqlite
