[project]
name = "curso-ia"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "groq>=1.0.0",
    "nltk>=3.9.2",
    "openai>=2.6.1",
    "pydantic>=2.12.3",
    "rank-bm25>=0.2.2",
    "scikit-learn>=1.8.0",
    "whoosh>=2.7.4",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
]
