[project]
name = "curso-ia"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "docling>=2.65.0",
    "fastembed>=0.7.4",
    "groq>=1.0.0",
    "langextract>=1.1.1",
    "nltk>=3.9.2",
    "numpay>=0.0.8",
    "openai>=2.6.1",
    "pydantic>=2.12.3",
    "qdrant-client>=1.16.2",
    "rank-bm25>=0.2.2",
    "scikit-learn>=1.8.0",
    "sentence-transformers>=5.2.0",
    "whoosh>=2.7.4",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
]
